Merged in tk-link-bank-account-response (pull request #18)
Unified response to link and get BusinessBankAccount

Approved-by: Vyacheslav Akimov